force-app/main/default/objects/CARE_System_Value__c/CARE_System_Value__c.object-meta.xml
<CustomObject>
    <description>Object to store system configuration values</description>
    <label>CARE System Value</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CARE System Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>