force-app/main/default/objects/CARE_System_Value__c/fields/SYSTEM_BEGIN_DATE__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_BEGIN_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SYSTEM BEGIN DATE</label>
    <type>Date</type>
</CustomField>