force-app/main/default/objects/CARE_System_Value__c/fields/SYSTEM_VALUE__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_VALUE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SYSTEM VALUE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>