force-app/main/default/objects/CARE_System_Value__c/fields/SYSTEM_VALUE_CODE__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_VALUE_CODE__c</fullName>
    <externalId>true</externalId>
    <label>SYSTEM VALUE CODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>