force-app/main/default/objects/CARE_System_Value__c/fields/SYSTEM_VALUE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_VALUE_TYPE__c</fullName>
    <label>SYSTEM_VALUE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BATCH JOB</fullName>
            </value>
            <value>
                <fullName>CAREOPS</fullName>
            </value>
            <value>
                <fullName>CONTROL</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>RENEWAL MONTH</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>