force-app/main/default/objects/CARE_System_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SYSTEM_VALUE_CODE__c</columns>
    <columns>SYSTEM_VALUE_TYPE__c</columns>
    <columns>SYSTEM_VALUE__c</columns>
    <columns>SYSTEM_BEGIN_DATE__c</columns>
    <columns>SYSTEM_END_DATE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>