force-app/main/default/objects/CARE_System_Value__c/listViews/Response_Check.listView-meta.xml
<ListView>
    <fullName>Response_Check</fullName>
    <columns>NAME</columns>
    <columns>SYSTEM_BEGIN_DATE__c</columns>
    <columns>SYSTEM_END_DATE__c</columns>
    <columns>SYSTEM_VALUE__c</columns>
    <columns>SYSTEM_VALUE_CODE__c</columns>
    <columns>SYSTEM_VALUE_TYPE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SYSTEM_VALUE_CODE__c</field>
        <operation>equals</operation>
        <value>810,820,830</value>
    </filters>
    <label>Response Check</label>
    <sharedTo>
        <role>Application_Processor</role>
    </sharedTo>
</ListView>